P3/test/pl0/error/error23.pl0
var a;

begin
a:=1+2+3^1;
end.
